
[TestApp/focus - 1]
╭─Messages─────────────────────────────────────────────────────╮
│                                                              │
│                                                              │
│                                                              │
│                                                              │
│                                                              │
│                                                              │
│                                                              │
│                                                              │
│                                                              │
╰──────────────────────────────────────────────────────────────╯
[32m╭─[0m[1;32mMessage Assistant[m[32m────────────────────────────────────────────╮[m
[32m│[m[37m[m[7;37m [m                                                             [32m│[m
[32m│[m[30m                                                              [m[32m│[m
[32m│[m[30m                                                              [m[32m│[m
[32m╰──────────────────────────────────────────────────────────────╯[m
---

[TestApp/focus - 2]
[32m╭─[0m[1;32mMessages[m[32m─────────────────────────────────────────────────────╮[m
[32m│[m                                                              [32m│[m
[32m│[m                                                              [32m│[m
[32m│[m                                                              [32m│[m
[32m│[m                                                              [32m│[m
[32m│[m                                                              [32m│[m
[32m│[m                                                              [32m│[m
[32m│[m                                                              [32m│[m
[32m│[m                                                              [32m│[m
[32m│[m                                                              [32m│[m
[32m╰──────────────────────────────────────────────────────────────╯[m
╭─Message Assistant────────────────────────────────────────────╮
│[37m[m[7;37m [m                                                             │
│[30m                                                              [m│
│[30m                                                              [m│
╰──────────────────────────────────────────────────────────────╯
---

[TestApp/focus - 3]
╭─Messages─────────────────────────────────────────────────────╮
│                                                              │
│                                                              │
│                                                              │
│                                                              │
│                                                              │
│                                                              │
│                                                              │
│                                                              │
│                                                              │
╰──────────────────────────────────────────────────────────────╯
[32m╭─[0m[1;32mMessage Assistant[m[32m────────────────────────────────────────────╮[m
[32m│[m[37m[m[7;37m [m                                                             [32m│[m
[32m│[m[30m                                                              [m[32m│[m
[32m│[m[30m                                                              [m[32m│[m
[32m╰──────────────────────────────────────────────────────────────╯[m
---

[TestApp/input - 1]
╭─Messages─────────────────────────────────────────────────────╮
│                                                              │
│                                                              │
│                                                              │
│                                                              │
│                                                              │
│                                                              │
│                                                              │
│                                                              │
│                                                              │
╰──────────────────────────────────────────────────────────────╯
[32m╭─[0m[1;32mMessage Assistant[m[32m────────────────────────────────────────────╮[m
[32m│[m[37m[mhey[7;37m [m                                                          [32m│[m
[32m│[m[30m                                                              [m[32m│[m
[32m│[m[30m                                                              [m[32m│[m
[32m╰──────────────────────────────────────────────────────────────╯[m
---

[TestApp/input - 2]
╭─Messages─────────────────────────────────────────────────────╮
│                                                           hey│
│                                                              │
│                                                              │
│                                                              │
│                                                              │
│                                                              │
│                                                              │
│                                                              │
│                                                              │
╰──────────────────────────────────────────────────────────────╯
[32m╭─[0m[1;32mMessage Assistant[m[32m────────────────────────────────────────────╮[m
[32m│[m[37m[m[7;37m [m                                                             [32m│[m
[32m│[m[30m                                                              [m[32m│[m
[32m│[m[30m                                                              [m[32m│[m
[32m╰──────────────────────────────────────────────────────────────╯[m
---
